# contests-workspace

./: .envrc  .gitignore  README.md  flake.nix  rch-config
algo_lib/src/collections/: bit_set.rs
algo_lib/src/collections/slice_ext/: consecutive_iter.rs
algo_lib/src/misc/: simd.rs
algo_lib/src/string/: hash.rs
run/: Cargo.toml
templates/: Cargo.toml
