[package]
name = "$TASK"
version = "0.1.0"
edition = "2021"

[dependencies]
algo_lib = { path = "../../algo_lib" }
tester = { path = "../../tester" }

[build-dependencies]
rust_competitive_helper_util = { git = "https://github.com/amal064/rust-competitive-helper" }

[features]
local = []
default = ["local"]
